# shunyainterfaces

./: .gitignore  060633bd.08766b7c.js  060633bd.b93eaa08.js  089b119a.6a7a1b01.js  0983b074.105dc327.js  0d531224.37e0a90f.js  0d531224.3fdcc0b5.js  0d531224.bc326212.js  0d531224.c23642b1.js  1.32c659f9.js  1.6662d05d.js  1.6de76ece.js  1.7db619bb.js  17896441.281300e1.js  17896441.80d7c5ce.js  17896441.ae88cd17.js  17896441.c95aa6c3.js  17896441.e4c686a2.js  1936fe39.3181923e.js  1936fe39.57b6f974.js  1936fe39.8fcf3ea4.js  1936fe39.9b4bc699.js  1951b7df.1149e721.js  1951b7df.272475d2.js  1951b7df.d5da1bbf.js  2051d327.254c23a8.js  2051d327.ea5b655c.js  26.390911b4.js  26.69613845.js  26.f394f5e3.js  27.53f32c2c.js  27.aada670e.js  27.e92129b3.js  30314a37.1c88b580.js  30314a37.2e3c85c8.js  30314a37.981f4c98.js  30314a37.a77abb43.js  30314a37.ad6d41e5.js  32.f58c2860.js  33.a7279712.js  (+118 more)
.github/workflows/: ccpp.yml
assets/boards/: README
configs/config/: RPI-config.yaml
configs/convert/: 2G-IoT-translational.yaml  RPI-translational.yaml  Rock-Pi-S-translational.yaml
docs/: adv-mode.html  api-adv-ACS712.html  api-adv-BH1750.html  api-adv-HCSR04.md  api-adv-PCF8591.html  api-adv-PCF8591.md  api-adv-YFS201.html  api-adv-bme280.html  api-adv-sensors.html  api-advance.html  api-advance.md  api-simp-ACS712.html  api-simp-BH1750.html  api-simp-PCF8591.html  api-simp-YFS201.md  api-simp-bme280.html  api-simp-bmp280.html  api-simp-displays.html  api-simp-inp-dev.html  api-simp-sensors.html  api-simple.html  blink.html  cloud_platforms.md  connectivity.md  data-logger.html  digitalread.html  docusaurus.config.js  embedded_boards.md  energy.html  error-handling.html  getting-started-adv-mode.md  guides-error-handlin.md  home.html  home.md  insight_tools.md  installation.html  package.json  sensors_actuators.md  sidebars.js  simple-mode.html  (+1 more)
docs/adv-mode/: index.html
docs/api-adv-ACS712/: index.html
docs/api-adv-BH1750/: index.html
docs/api-adv-HCSR04/: index.html
docs/api-adv-YFS201/: index.html
docs/api-adv-bme280/: index.html
docs/api-adv-sensors/: index.html
docs/api-advance/: index.html
docs/api-simp-ACS712/: index.html
docs/api-simp-BH1750/: index.html
docs/api-simp-HCSR04/: index.html
docs/api-simp-PCF8591/: index.html
docs/api-simp-bme280/: index.html
docs/api-simp-bmp280/: index.html
docs/api-simp-displays/: index.html
docs/api-simp-inp-dev/: index.html
docs/api-simp-sensors/: index.html
docs/api-simple/: index.html
docs/blink/: index.html
docs/cookbook/: demo-data-logger.md  demo-smart-energy-meter.md  demo-water-management.md
docs/core-api/: api-core-gpio.html  api-core-gpio.md  api-core-pwm.html
docs/data-logger/: index.html
docs/deprecated/: api-adv-ACS712.html  api-adv-ACS712.md  api-adv-BH1750.html  api-adv-BH1750.md  api-adv-HCSR04.html  api-adv-YFS201.html  api-adv-bme280.md  api-advance.html  api-core-gpio.html  api-core-i2c.html  api-core-pwm.html  api-core-uart.html  api-simp-ACS712.html  api-simp-ACS712.md  api-simp-HCSR04.html  api-simp-HCSR04.md  api-simp-PCF8591.html  api-simp-bme280.html  api-simp-bme280.md  api-simp-displays.md  api-simp-sensors.html  api-simp-sensors.md  api-simple.html  api-simple.md  getting-started-simp-mode.md
docs/digitalread/: index.html
docs/energy/: index.html
docs/error-handling/: index.html
docs/guides/: error-handling.html  getting-started-digitalread.md  getting-started-first-code.md  getting-started-installation.md  installation.html
docs/home/: index.html
docs/installation/: index.html
docs/quick-start/: 01-intro.md  03-define.html  03-define.md  04-design.md  05-burn-os.md  06-connect.md  demo-installation.html  demo.html  demo.md  installation.md
docs/reference/: api-adv-ACS712.html  api-adv-HCSR04.html  api-adv-YFS201.html  api-adv-YFS201.md  api-adv-sense.md  api-adv-sensors.html  api-advance.html  api-core-gpio.html  api-simp-PCF8591.html  api-simp-PCF8591.md  api-simp-bmp280.md  api-simp-inp-dev.html  api-simp-inp-dev.md  api-simp-sensors.html
docs/simple-mode/: index.html
docs/water-meter/: index.html
en/: help.html  index.html
en/help/: index.html
examples/: KY-017_example.c  KY-025_example.c  KY-038_example.c  accelerometer-example.c  ball-switch-sensor-example.c  bh1750_test.c  blink.c  bme280_test.c  capacitive-soil-moisture-sensor-example.c  heartbeat-sensor-example.c  ir-proximity-sensor-example.c  isr.c  joystick-example.c  light-blocking-sensor-example.c  lm393_test.c  metal-touch-sensor-example.c  mq3-alcohol-sensor.c  pir-sensor-example.c  soil-moisture-sensor-example.c  test-gpio.c  ultrasonic-sensor-example.c  water-flow-sensor-example.c  water-level-depth-sensor-example.c
help/: index.html
include/: adv_functions.h  functions.h  influxdb.h  pcf8591.h  sensor_ids.h  simple_functions.h  twilio.h
user-docs/: GPIO-interface.md  I2C-interface.md  Interrupts.md  SPI-interface.md  UART-interface.md  how-to-install-shunya-interfaces.md  shunya-interfaces-API.md  user-docs-main-page.md
users/: index.html
website/: sidebars.json  siteConfig.js
(+128 files in other folders)
